--- a/TuneTracker.ipynb
+++ b/TuneTracker.ipynb
@@ -6,7 +6,7 @@
         "id": "eLGkxFmLBIO5"
       },
       "source": [
-        "# Final Data Visualization Project\n",
+        "# Tune Tracker: Visualizing Music Dynamics\n",
         "\n",
         "### Name(s): \n",
         "Rhea Sharma (200576620)\n",
